--- a/README.Rmd
+++ b/README.Rmd
@@ -13,11 +13,14 @@ knitr::opts_chunk$set(
 
 # bayesm.HART
 
-`bayesm.HART` implements a Metropolis-within-Gibbs sampler for the Hierarchical Additive Regression Trees (HART) logit model proposed in Wiemann (2025). 
 
-HART generalizes conventional hierarchical models by defining the representative consumer as a flexible function of potentially many characteristics. Drawing on the Bayesian Additive Regression Trees (BART) of Chipman, George, and McCulloch (2010), HART specifies this function as a sum-of-trees factor model. HART's combination of a flexible nonparametric prior within the hierarchical model provides a coherent framework for (Bayes-) optimal managerial decisions that adapt to the firm's familiarity with the consumer: first, HART flexibly leverages observed characteristics for granular predictions about new consumers; second, as a consumer's choices accumulate, their individual-level preferences adaptively deviate from this representative unit.
+`bayesm.HART` implements the MCMC sampling routine for the Hierarchical Additive Regression Trees (HART) logit model proposed in Wiemann (2025). 
+
+ The HART logit model flexibly leverages potentially many observed consumer characteristics and thus generalizes existing hierarchical models that exclusively model the representative consumer as a linear function of a select few characteristics. HART's combination of a flexible nonparametric prior within the hierarchical model provides a coherent framework for (Bayes-) optimal managerial decisions that adapt to the firm's familiarity with the consumer: first, HART flexibly leverages observed characteristics for granular predictions about new consumers; second, their individual-level preference estimates adapt optimally as a consumer's choices accumulate.
 
 See the corresponding working paper [Personalization with HART](https://thomaswiemann.com/assets/pdfs/wiemann_jmp.pdf) for further discussion and details.
+
+The `bayesm.HART` package builds on the excellent ([and highly popular](https://cranlogs.r-pkg.org/downloads/total/last-month/bayesm,BART)) `bayesm` and `BART` packages. The syntax for estimating the HART logit model mirrors the syntax of the `bayesm` package. Researchers with existing `bayesm` code will only need to adapt the `Prior` argument to get started--see the code snippet below.
 
 ## Installation
 
@@ -33,13 +36,14 @@ devtools::install_github("thomaswiemann/bayesm.HART", dependencies = TRUE)
 
 ## Example
 
-The following example applies the HART logit model to the canonical conjoint dataset of Allenby and Ginter (1995) on credit card design, which is included in the `bayesm` package. The first code block loads the data and formats it into the list structure required by `rhierMnlRwMixture`. It then fits the HART logit model using a Metropolis-within-Gibbs sampler. We specify a sum-of-trees prior with 50 trees for the representative consumer and run the MCMC algorithm for 2,000 iterations, keeping every second draw.
+The following example applies the HART logit model to the canonical conjoint dataset of Allenby and Ginter (1995) on credit card design. The first code block loads the data and formats it into the list structure required by `rhierMnlRwMixture`. It also specifies the MCMC hyperparameters. The syntax for this codeblock is identical for the `bayesm` and `bayesm.HART` packages.
 
 ```{r example-fit, message=FALSE, warning=FALSE}
+# Load bayesm.HART for the sampler; load bayesm for the bank data
 library(bayesm.HART)
 library(bayesm)
 
-# Load and prepare data from the 'bank' dataset
+# Load and prepare data from the 'bank' dataset (same as bayesm)
 data(bank)
 choiceAtt <- bank$choiceAtt
 hh <- levels(factor(choiceAtt$id))
@@ -53,21 +57,31 @@ for (i in 1:nhh) {
     X[seq(1, nrow(X), by = 2), ] = X_temp
     lgtdata[[i]] = list(y=y, X=X)
 }
-Z <- as.matrix(bank$demo[, -1])
-Z <- t(t(Z) - colMeans(Z))
+Z <- as.matrix(bank$demo[, -1]) # omit id
+Z <- t(t(Z) - colMeans(Z)) # de-mean covariates as required by bayesm
+
+# Final data object (same as bayesm)
 Data <- list(lgtdata = lgtdata, Z = Z, p = 2)
 
-# Set MCMC parameters and suppress sampler output
+# MCMC hyperparameters (same as bayesm)
 Mcmc <- list(R = 2000, keep = 2, nprint = 500)
+```
 
+To fit the HART logit model using a Metropolis-within-Gibbs sampler, call the `rhierMnlRwMixture` routine. The key difference between conventional calls to linear hierarchical specifications based on `bayesm` is the use of the additional `Prior` argument `bart`. For simplicity, the code below specifies a HART model with only 50 trees per factor, leaving all other hyperparameters at their defaults. See also `?rhierMnlRwMixture` for details. 
+
+```{r}
 # Fit the HART logit model
 out <- bayesm.HART::rhierMnlRwMixture(
     Data = Data, Mcmc = Mcmc, 
-    Prior = list(ncomp = 1, bart = list(num_trees = 50))
+    Prior = list(
+      ncomp = 1, 
+      bart = list(num_trees = 50) # new HART prior parameters
+      ),
+    r_verbose = F # suppress R print output (optional)
 )
-```
 
-With the MCMC draws from the fitted model, we can compute posterior estimates for any quantity of interest. A key object is the representative consumer, which represents the expected part-worths for a consumer with characteristics. The following code computes the posterior mean and standard deviation of these expected part-worths for three credit card attributes.
+```
+With the MCMC draws from the fitted model, we can characterize the posterior estimates for any quantity of interest. A key object is the *representative respondent*, which represents the expected part-worths for a respondent conditional on their characteristics. The following code computes the posterior mean and standard deviation of these expected part-worths for three credit card attributes.
 
 ```{r, results-table, message=FALSE, warning=FALSE}
 DeltaZ_hat <- predict(out, newdata = Data, type = "DeltaZ+mu", 
@@ -96,12 +110,13 @@ colnames(results_df) <- c("Interest Low Fixed", "Annual Fee Low", "Bank Out-of-S
 print(results_df, digits = 3)
 ```
 
+
 ## Learn More about `bayesm.HART`
 
-Check out our articles to learn more:
+Curious and want to learn more? Have a look at the `bayesm.HART` vignettes:
 
-- `vignette("bayesm.HART")` provides a more detailed introduction 
-- `vignette("marginal-effects")` discusses how to compute and plot marginal effects.
+- `vignette("bayesm-HART")` provides a more detailed introduction 
+- `vignette("marginal-effects")` discusses how to compute and plot marginal effects
 
 ## Acknowledgements
 
@@ -116,7 +131,7 @@ contributions of their respective authors:
 
 ## References
 
-Allenby, Greg M. and James L. Ginter (1995). “Using Extremes to Design Products and Segment Markets.” *Journal of Marketing Research* 32.4, pp. 392–403.
+Allenby, Greg M. and James L. Ginter (1995). “Using Extremes to Design Products and Segment Markets.” Journal of Marketing Research 32.4, pp. 392–403.
 
 Chipman, Hugh A., Edward I. George, and Robert E. McCulloch (2010). “BART: Bayesian Additive Regression Trees.” Annals of Applied Statistics 4.1.
 
@@ -126,4 +141,4 @@ Rossi, Peter (2023). bayesm: Bayesian Inference for Marketing/Micro-Econometrics
 
 Sparapani, Rodney, Charles Spanbauer, and Robert McCulloch (2021). “Nonparametric Machine Learning and Efficient Computation with Bayesian Additive Regression Trees: The BART R Package.” Journal of Statistical Software 97, pp. 1–66.
 
-Wiemann, Thomas (2025). "Personalization with HART." Working paper.
+Wiemann, Thomas (2025). "[Personalization with HART](https://thomaswiemann.com/assets/pdfs/wiemann_jmp.pdf)." Working paper.
